[gd_scene load_steps=12 format=3 uid="uid://cuhf2aekbiftb"]

[ext_resource type="Script" path="res://VanThinh/MenuTamDung/menu_tam_dung.gd" id="1_jifvf"]
[ext_resource type="Texture2D" uid="uid://b0ctcovf8qf2f" path="res://VanThinh/MenuTamDung/img/bang_menu_tamdung.png" id="1_xx676"]
[ext_resource type="Texture2D" uid="uid://c2oox414hrlon" path="res://VanThinh/MenuTamDung/img/nhanvat.png" id="2_n0w2g"]
[ext_resource type="Texture2D" uid="uid://b1bxhbkoygw1g" path="res://VanThinh/MenuTamDung/img/icon1.png" id="3_pxma1"]
[ext_resource type="Texture2D" uid="uid://rt04sq1elryu" path="res://VanThinh/MenuTamDung/img/icon2.png" id="4_e7ld7"]
[ext_resource type="Texture2D" uid="uid://dq2lufk56sn65" path="res://VanThinh/MenuTamDung/img/tieude_tamdung.png" id="5_3epvx"]
[ext_resource type="Texture2D" uid="uid://dqkkramyrrqh1" path="res://VanThinh/MenuTamDung/img/home.png" id="7_cqxrg"]
[ext_resource type="Texture2D" uid="uid://cur48ri6u1sgv" path="res://VanThinh/MenuTamDung/img/play.png" id="8_vcscf"]
[ext_resource type="Texture2D" uid="uid://qrkfkonhyn80" path="res://VanThinh/MenuTamDung/img/caiDat.png" id="9_hagu0"]
[ext_resource type="Texture2D" uid="uid://1kbgj6qa7frb" path="res://VanThinh/MenuTamDung/img/add.png" id="10_27rt5"]
[ext_resource type="AudioStream" uid="uid://dr0mf0646dlbp" path="res://VanThinh/MenuCaiDat/AmThanh/button-124476.mp3" id="11_nk27j"]

[node name="menu_tam_dung" type="Node2D"]
script = ExtResource("1_jifvf")

[node name="BangMenuTamdung" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(404, 171)
scale = Vector2(1, 1.442)
texture = ExtResource("1_xx676")

[node name="TextureRect" type="TextureRect" parent="BangMenuTamdung"]
offset_left = -374.0
offset_top = -106.0
offset_right = -291.0
offset_bottom = -69.0
texture = ExtResource("2_n0w2g")
expand_mode = 1

[node name="Icon1" type="Sprite2D" parent="BangMenuTamdung"]
texture_filter = 1
position = Vector2(-338, -15.255)
scale = Vector2(1, 0.693)
texture = ExtResource("3_pxma1")

[node name="Icon2" type="Sprite2D" parent="BangMenuTamdung"]
texture_filter = 1
position = Vector2(340, -10.401)
scale = Vector2(1, 0.693481)
texture = ExtResource("4_e7ld7")

[node name="TieudeTamdung" type="Sprite2D" parent="BangMenuTamdung"]
texture_filter = 1
position = Vector2(4.5, -87.023)
scale = Vector2(0.759, 0.316)
texture = ExtResource("5_3epvx")

[node name="button_home" type="Button" parent="BangMenuTamdung"]
offset_left = -383.0
offset_top = 50.0
offset_right = -185.0
offset_bottom = 107.0

[node name="Home" type="Sprite2D" parent="BangMenuTamdung/button_home"]
texture_filter = 1
position = Vector2(100, 27.6699)
scale = Vector2(0.654, 0.454)
texture = ExtResource("7_cqxrg")

[node name="button_play" type="Button" parent="BangMenuTamdung"]
offset_left = -178.0
offset_top = 48.0
offset_right = 206.0
offset_bottom = 101.0

[node name="Play" type="Sprite2D" parent="BangMenuTamdung/button_play"]
texture_filter = 1
position = Vector2(192.5, 29.3232)
scale = Vector2(0.819149, 0.440772)
texture = ExtResource("8_vcscf")

[node name="button_caidat" type="Button" parent="BangMenuTamdung"]
offset_left = 214.0
offset_top = 49.0
offset_right = 383.0
offset_bottom = 104.0

[node name="CaiDat" type="Sprite2D" parent="BangMenuTamdung/button_caidat"]
texture_filter = 1
position = Vector2(84, 27.6297)
scale = Vector2(0.574324, 0.48057)
texture = ExtResource("9_hagu0")

[node name="ScrollContainer" type="ScrollContainer" parent="BangMenuTamdung"]
offset_left = -291.0
offset_top = -42.0
offset_right = 299.0
offset_bottom = 41.0

[node name="ColorRect" type="ColorRect" parent="BangMenuTamdung/ScrollContainer"]
custom_minimum_size = Vector2(665, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 75.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 75.0
offset_top = 1.0
offset_right = 149.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 149.0
offset_top = 1.0
offset_right = 223.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 223.0
offset_top = 1.0
offset_right = 297.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="TextureRect5" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 297.0
offset_top = 1.0
offset_right = 371.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="TextureRect6" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 371.0
offset_top = 1.0
offset_right = 445.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="TextureRect7" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 445.0
offset_top = 1.0
offset_right = 519.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="TextureRect8" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 519.0
offset_top = 1.0
offset_right = 593.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="TextureRect9" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 593.0
offset_top = 1.0
offset_right = 667.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="TextureRect10" type="TextureRect" parent="BangMenuTamdung/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 668.0
offset_top = 1.0
offset_right = 742.0
offset_bottom = 58.0
texture = ExtResource("10_27rt5")
expand_mode = 1

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_nk27j")
pitch_scale = 1.13

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.512
one_shot = true

[connection signal="button_up" from="BangMenuTamdung/button_home" to="." method="_on_button_home_button_up"]
[connection signal="button_up" from="BangMenuTamdung/button_play" to="." method="_on_button_play_button_up"]
[connection signal="button_up" from="BangMenuTamdung/button_caidat" to="." method="_on_button_caidat_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
